added makefile to openacc,updated notebooks

--- a/hpc/openacc/English/C/jupyter_notebook/openacc_c_lab1.ipynb
+++ b/hpc/openacc/English/C/jupyter_notebook/openacc_c_lab1.ipynb
@@ -231,7 +231,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! pgcc -fast -o laplace jacobi.c laplace2d.c && echo \"Compilation Successful!\" && ./laplace"
+    "!cd ../source_code/lab1 && make clean && make laplace_serial && echo \"Compilation Successful!\" && ./laplace"
    ]
   },
   {
@@ -369,7 +369,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! pgcc -fast -ta=multicore -Minfo=accel -o laplace jacobi.c laplace2d.c && echo \"Compilation Successful!\" && ./laplace"
+    "!cd ../source_code/lab1 && make clean && make laplace_multicore && echo \"Compilation Successful!\" && ./laplace"
    ]
   },
   {
@@ -421,7 +421,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! pgcc -fast -ta=tesla:cc70,managed -Minfo=accel -o laplace jacobi.c laplace2d.c && echo \"Compilation Successful!\" && ./laplace"
+    "!cd ../source_code/lab1 && make clean && make laplace_gpu && echo \"Compilation Successful!\" && ./laplace"
    ]
   },
   {
