--- a/hpc/openacc/English/C/jupyter_notebook/openacc_c_lab3.ipynb
+++ b/hpc/openacc/English/C/jupyter_notebook/openacc_c_lab3.ipynb
@@ -78,7 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pgcc -fast -ta=tesla:cc70 -Minfo=accel -o laplace_baseline laplace2d.c jacobi.c && ./laplace_baseline"
+    "!cd ../source_code/lab3 && make clean && make && ./laplace"
    ]
   },
   {
@@ -171,7 +171,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pgcc -ta=tesla:cc70 -Minfo=accel -o laplace_collapse jacobi.c laplace2d.c && ./laplace_collapse"
+    "!cd ../source_code/lab3 && make clean && make && ./laplace"
    ]
   },
   {
@@ -294,7 +294,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pgcc -ta=tesla:cc70 -Minfo=accel -o laplace_tile jacobi.c laplace2d.c && ./laplace_tile"
+    "!cd ../source_code/lab3 && make clean && make && ./laplace"
    ]
   },
   {
