NV HPC SDK, new makefiles,Jupyter revamps

--- a/hpc/miniprofiler/English/C/jupyter_notebook/profiling-c-lab3.ipynb
+++ b/hpc/miniprofiler/English/C/jupyter_notebook/profiling-c-lab3.ipynb
@@ -85,7 +85,7 @@
     "\n",
     "Now, add `collapse` clause to the code and make necessary changes to the loop directives. Once done, save the file, re-compile via `make`, and profile it again. \n",
     "\n",
-    "From the top menu, click on *File*, and *Open* `miniWeather_openacc.cpp` and `Makefile` from the current directory at `English/C/source_code/lab3` directory. Remember to **SAVE** your code after changes, before running below cells."
+    "From the top menu, click on *File*, and *Open* `miniWeather_openacc.cpp` and `Makefile` from the current directory at `C/source_code/lab3` directory. Remember to **SAVE** your code after changes, before running below cells."
    ]
   },
   {
@@ -94,7 +94,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cd ../source_code/lab3 && make"
+    "!cd ../source_code/lab3 && make clean && make"
    ]
   },
   {
@@ -114,7 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cd ../source_code/lab3 && nsys profile -t nvtx --stats=true --force-overwrite true -o miniWeather_4 ./miniWeather"
+    "!cd ../source_code/lab3 && nsys profile -t nvtx,openacc --stats=true --force-overwrite true -o miniWeather_4 ./miniWeather"
    ]
   },
   {
@@ -125,7 +125,7 @@
     "\n",
     "<img src=\"images/occu-3.png\" width=\"40%\" height=\"40%\">\n",
     "\n",
-    "As you can see from the above screenshot, the theoretical occupancy is now 75% and the block dimension is now `<128,1,1>` where *128* is the vector size per gang. \n",
+    "As you can see from the above screenshot, the theoretical occupancy is now 75% and the block dimension is now `<128,1,1>` where *128* is the vector size per gang. **Screenshots represents profiler report for the values of 400,200,1500.**\n",
     "\n",
     "```cpp\n",
     "#pragma acc parallel loop collapse(3) private(indt, indf1, indf2) \n",
@@ -144,7 +144,7 @@
     "  }\n",
     "```\n",
     "\n",
-    "The iteration count for the collapsed loop is `NUM_VARS * nz * nx` where (in this example),\n",
+    "The iteration count for the collapsed loop is `NUM_VARS * nz * nx` where (in the example screenshot),\n",
     "\n",
     "- nz= 200,\n",
     "- nx = 400, and \n",
