--- a/hpc/miniprofiler/English/Fortran/jupyter_notebook/profiling-fortran-lab3.ipynb
+++ b/hpc/miniprofiler/English/Fortran/jupyter_notebook/profiling-fortran-lab3.ipynb
@@ -79,7 +79,7 @@
     "\n",
     "Now, add `collapse` clause to the code and make necessary changes to the loop directives. Once done, save the file, re-compile via `make`, and profile it again. \n",
     "\n",
-    "From the top menu, click on *File*, and *Open* `miniWeather_openacc.f90` and `Makefile` from the current directory at `English/Fortran/source_code/lab3` directory. Remember to **SAVE** your code after changes, before running below cells."
+    "From the top menu, click on *File*, and *Open* `miniWeather_openacc.f90` and `Makefile` from the current directory at `Fortran/source_code/lab3` directory. Remember to **SAVE** your code after changes, before running below cells."
    ]
   },
   {
@@ -88,7 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cd ../source_code/lab3 && make"
+    "!cd ../source_code/lab3 && make clean && make"
    ]
   },
   {
@@ -108,7 +108,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cd ../source_code/lab3 && nsys profile -t nvtx --stats=true --force-overwrite true -o miniWeather_4 ./miniWeather"
+    "!cd ../source_code/lab3 && nsys profile -t nvtx,openacc --stats=true --force-overwrite true -o miniWeather_4 ./miniWeather"
    ]
   },
   {
@@ -119,7 +119,7 @@
     "\n",
     "<img src=\"images/occu-3.png\" width=\"40%\" height=\"40%\">\n",
     "\n",
-    "As you can see from the above screenshot, the theoretical occupancy is now 75% and the block dimension is now `<128,1,1>` where *128* is the vector size per gang. \n",
+    "As you can see from the above screenshot, the theoretical occupancy is now 75% and the block dimension is now `<128,1,1>` where *128* is the vector size per gang. **Screenshots represents profiler report for the values of 400,200,1500.**\n",
     "\n",
     "```fortran\n",
     "    !$acc parallel loop collapse(3) \n",
@@ -132,13 +132,13 @@
     "    enddo\n",
     "```\n",
     "\n",
-    "The iteration count for the collapsed loop is `NUM_VARS * nz * nx` where (in this example),\n",
+    "The iteration count for the collapsed loop is `NUM_VARS * nz * nx` where (in the example screenshot),\n",
     "\n",
     "- nz= 200,\n",
     "- nx = 400, and \n",
     "- NUM_VARS = 4\n",
     "\n",
-    "So, the interaction count for this particular loop inside the `compute_tendencies_z_383_gpu` function is 320K. This number divided by the vector length of *128* would gives us the grid dimension of `<2500,1,1>`.\n",
+    "So, the interaction count for this particular loop inside the `compute_tendencies_z_383_gpu` function is 320K. This number divided by the vector length of *128* would gives us the grid dimension of `<2500,1,1>`. \n",
     "\n",
     "By creating a single iteration space across the nested loops and increasing the iteration count, we improved the occupancy and extracted more parallelism.\n",
     "\n",
