--- a/hpc/openacc/English/C/jupyter_notebook/openacc_c_lab1-bonus.ipynb
+++ b/hpc/openacc/English/C/jupyter_notebook/openacc_c_lab1-bonus.ipynb
@@ -63,7 +63,7 @@
     "![kernels1](images/kernels1.png)\n",
     "![kernels2](images/kernels2.png)\n",
     "\n",
-    "OK, now it's your turn to try the `kernels` approach. From the top menu, click on *File*, and *Open* `laplace2d.c` from the current directory at `English/C/source_code/lab1` directory and replace your `acc parallel loop` directives with `acc kernels` and rerun the code. Remember to **SAVE** your code after changes, before running below cells.\n"
+    "OK, now it's your turn to try the `kernels` approach. From the top menu, click on *File*, and *Open* `laplace2d.c` from the current directory at `C/source_code/lab1` directory and replace your `acc parallel loop` directives with `acc kernels` and rerun the code. Remember to **SAVE** your code after changes, before running below cells.\n"
    ]
   },
   {
