--- a/hpc/openacc/English/C/jupyter_notebook/openacc_c_lab1.ipynb
+++ b/hpc/openacc/English/C/jupyter_notebook/openacc_c_lab1.ipynb
@@ -351,7 +351,7 @@
    "source": [
     "### Parallelize the Example Code\n",
     "\n",
-    "At this point you have all of the tools you need to begin accelerating your application. The loops you will be parallelizing are in `laplace2d.c`. From the top menu, click on *File*, and *Open* `laplace2d.c` from the current directory at `English/C/source_code/lab1` directory. Remember to **SAVE** your code after changes, before running below cells.\n",
+    "At this point you have all of the tools you need to begin accelerating your application. The loops you will be parallelizing are in `laplace2d.c`. From the top menu, click on *File*, and *Open* `laplace2d.c` from the current directory at `C/source_code/lab1` directory. Remember to **SAVE** your code after changes, before running below cells.\n",
     "\n",
     "It is advisable to start with the `calcNext` routine and test your changes by compiling and running the code before moving on to the `swap` routine. OpenACC can be incrementally added to your application so that you can ensure each change is correct before getting too far along, which greatly simplifies debugging.\n",
     "\n",
