--- a/hpc/openacc/English/C/jupyter_notebook/openacc_c_lab3-bonus.ipynb
+++ b/hpc/openacc/English/C/jupyter_notebook/openacc_c_lab3-bonus.ipynb
@@ -189,7 +189,7 @@
    "source": [
     "### Implementing the Gang Worker Vector\n",
     "\n",
-    "From the top menu, click on *File*, and *Open* `laplace2d.c` from the current directory at `English/C/source_code/lab3` directory. Replace our ealier clauses with **gang, worker, and vector** To reorganize our thread blocks. Try it using a few different numbers, but always keep the vector length as a **multiple of 32** to fully utilize **warps**.\n",
+    "From the top menu, click on *File*, and *Open* `laplace2d.c` from the current directory at `C/source_code/lab3` directory. Replace our ealier clauses with **gang, worker, and vector** To reorganize our thread blocks. Try it using a few different numbers, but always keep the vector length as a **multiple of 32** to fully utilize **warps**.\n",
     "\n",
     "Remember to **SAVE** your code after changes, before running below cells.\n",
     "\n",
@@ -202,7 +202,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pgcc -fast -ta=tesla -Minfo=accel -o laplace_gang_worker_vector jacobi.c laplace2d.c && ./laplace_gang_worker_vector"
+    "!cd ../source_code/lab3 && make clean && make && ./laplace"
    ]
   },
   {
