--- a/hpc/openacc/English/Fortran/jupyter_notebook/openacc_fortran_lab3-bonus.ipynb
+++ b/hpc/openacc/English/Fortran/jupyter_notebook/openacc_fortran_lab3-bonus.ipynb
@@ -168,7 +168,7 @@
    "source": [
     "### Implementing the Gang, Worker, and Vector\n",
     "\n",
-    "From the top menu, click on *File*, and *Open* `laplace2d.f90` from the current directory at `English/Fortran/source_code/lab3` directory. Replace our earlier clauses with **gang, worker, and vector** To reorganize our thread blocks. Try it using a few different numbers, but always keep the vector length as a **multiple of 32** to fully utilize **warps**.\n",
+    "From the top menu, click on *File*, and *Open* `laplace2d.f90` from the current directory at `Fortran/source_code/lab3` directory. Replace our earlier clauses with **gang, worker, and vector** To reorganize our thread blocks. Try it using a few different numbers, but always keep the vector length as a **multiple of 32** to fully utilize **warps**.\n",
     "\n",
     "Remember to **SAVE** your code after changes, before running below cells.\n",
     "\n",
@@ -181,7 +181,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pgfortran -fast -ta=tesla -Minfo=accel -o laplace_gang_worker_vector laplace2d.f90 jacobi.f90 && ./laplace_gang_worker_vector"
+    "!cd ../source_code/lab3 && make clean && make && ./laplace"
    ]
   },
   {
