--- a/hpc/miniprofiler/English/C/jupyter_notebook/profiling-c-lab5.ipynb
+++ b/hpc/miniprofiler/English/C/jupyter_notebook/profiling-c-lab5.ipynb
@@ -113,7 +113,7 @@
     "- `-s`: to specify number of kernels to skip before collection starts\n",
     "- `-k`: to filter the kernels by a regex match of their names\n",
     "- `-f`: Overwrites the existing generated report\n",
-    "- `-o`: name for the intermediate result file, created at the end of the collection (.nsight-cuprof-report filename)\n",
+    "- `-o`: name for the intermediate result file, created at the end of the collection (.nsight-cuprof-report or .ncu-rep filename)\n",
     "\n",
     "**Customising data collection**: One may ask how would you decide on the number of kernels to skip and how many kernel launches to collect? Since data is collected per kernel, it makes sense to collect for more than one kernel launches if kernels have different behavior or performance characteristics. The decision on how many kernel launches to skip or collect depends on if you want to collect the performance metrics for those kernel launches or not.\n",
     "\n",
@@ -133,7 +133,7 @@
     "\n",
     "<img src=\"images/summary-compute.png\" width=\"80%\" height=\"80%\">\n",
     "\n",
-    "2) NVIDIA Nsight Compute UI: To permanently store the profiler report, use `-o` to specify the output filename. After the profiling session ends, a `*.nsight-cuprof-report` file will be created. This file can be loaded into Nsight Compute UI using *File -> Open*. If you would like to view this on your local machine, this requires that the local system has CUDA toolkit installed of same version and the Nsight Compute UI version should match the CLI version. More details on where to download CUDA toolkit can be found in the “Links and Resources” at the end of this page.\n",
+    "2) NVIDIA Nsight Compute UI: To permanently store the profiler report, use `-o` to specify the output filename. After the profiling session ends, a `*.nsight-cuprof-report` or `*.ncu-rep` file will be created. This file can be loaded into Nsight Compute UI using *File -> Open*. If you would like to view this on your local machine, this requires that the local system has CUDA toolkit installed of same version and the Nsight Compute UI version should match the CLI version. More details on where to download CUDA toolkit can be found in the “Links and Resources” at the end of this page.\n",
     "\n",
     "To view the profiler report, simply open the file from the GUI (File > Open).\n",
     "\n",
@@ -182,7 +182,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cd ../source_code/lab5 && make"
+    "!cd ../source_code/lab5 && make clean && make"
    ]
   },
   {
@@ -198,7 +198,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cd ../source_code/lab5 && nsys profile -t nvtx --stats=true --force-overwrite true -o miniWeather_5 ./miniWeather"
+    "!cd ../source_code/lab5 && nsys profile -t nvtx,openacc --stats=true --force-overwrite true -o miniWeather_5 ./miniWeather"
    ]
   },
   {
@@ -209,7 +209,7 @@
     "\n",
     "<img src=\"images/cexer5.png\">\n",
     "\n",
-    "As you can see in the example output, the initialization looks very expensive and kernels are very small that the GPU compute part of the problem is very small. Check how much time (what percentage) is spend in each relative to the time it takes to run the code. \n",
+    "As you can see in the example output, the initialization looks very expensive and kernels are very small that the GPU compute part of the problem is very small. Check how much time (what percentage) is spend in each relative to the time it takes to run the code. **Screenshots represents profiler report for the values of 400,200,1500.**\n",
     "\n",
     "Let's take the most expensive kernel and take a closer look and see what the Nsight Compute recommends us to do."
    ]
@@ -234,13 +234,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Download the profiler output](../source_code/lab5/miniWeather_1.nsight-cuprof-report) and open it via the Nsight Compute UI. This tool has a lot of sections that focuses on different areas of the GPU and presents them all in one page. Inspect these sections, then click on the \"Apply Rules\" to check the bottlenecks. As you can see from the example output below, Nsight Compute profiler suggests to look at the \"Launch Statistics\" section because the kernel grid is too small to fill the available resources on the GPU.\n",
+    "[Download the profiler output](../source_code/lab5/miniWeather_1.ncu-rep) and open it via the Nsight Compute UI. This tool has a lot of sections that focuses on different areas of the GPU and presents them all in one page. Inspect these sections, then click on the \"Apply Rules\" to check the bottlenecks. As you can see from the example output below, Nsight Compute profiler suggests to look at the \"Launch Statistics\" section because the kernel grid is too small to fill the available resources on the GPU.\n",
     "\n",
     "<img src=\"images/ccompute.png\">\n",
     "\n",
-    "We previously discussed the Amdahl's law in the first exercise. It is very important to understand the relation between the problem size and computational performance as this can determine the amount of speedup and benefit you would get by parallelizing on GPU. Due to the small problem size (`nx_glob`, `nz_glob` , and `sim_time` in this example), most of the computation is dominated by the initialization and there is not enough work/computation to make it suitable for GPU. Let's change the value of `nx_glob`, `nz_glob` , and `sim_time` in the code to `nx_glob` = 400 , `nz_glob`= 200 , and `sim_time`= 1500. \n",
+    "We previously discussed the Amdahl's law in the first exercise. It is very important to understand the relation between the problem size and computational performance as this can determine the amount of speedup and benefit you would get by parallelizing on GPU. Due to the small problem size (`nx_glob`, `nz_glob` , and `sim_time` in this example), most of the computation is dominated by the initialization and there is not enough work/computation to make it suitable for GPU. Let's change the value of `nx_glob`, `nz_glob` , and `sim_time` in the code to `nx_glob` = 40 , `nz_glob`= 20 , and `sim_time`= 1000. \n",
     "\n",
-    "From the top menu, click on *File*, and *Open* `miniWeather_openacc.cpp` from the current directory at `English/C/source_code/lab5` directory. Remember to **SAVE** your code after changes, before running below cells.\n",
+    "From the top menu, click on *File*, and *Open* `miniWeather_openacc.cpp` from the current directory at `C/source_code/lab5` directory. Remember to **SAVE** your code after changes, before running below cells.\n",
     "\n",
     "One done, **Compile** and **Profile** the application again with Nsight Compute CLI (`nv-nsight-cu-cli`)."
    ]
@@ -251,7 +251,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cd ../source_code/lab5 &&  make"
+    "!cd ../source_code/lab5 && make clean && make"
    ]
   },
   {
@@ -267,7 +267,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Download the profiler output](../source_code/lab5/miniWeather_2.nsight-cuprof-report) and open it via the Nsight Compute UI. \n",
+    "[Download the profiler output](../source_code/lab5/miniWeather_2.ncu-rep) and open it via the Nsight Compute UI. \n",
     "\n",
     "**Diff the reports**\n",
     "\n",
