--- a/hpc/openacc/English/C/jupyter_notebook/openacc_c_lab3.ipynb
+++ b/hpc/openacc/English/C/jupyter_notebook/openacc_c_lab3.ipynb
@@ -158,7 +158,7 @@
    "source": [
     "#### Implementing the Collapse Clause\n",
     "\n",
-    "From the top menu, click on *File*, and *Open* `laplace2d.c` from the current directory at `English/C/source_code/lab3` directory. Use the **collapse clause** to collapse our multi-dimensional loops into a single dimensional loop.\n",
+    "From the top menu, click on *File*, and *Open* `laplace2d.c` from the current directory at `C/source_code/lab3` directory. Use the **collapse clause** to collapse our multi-dimensional loops into a single dimensional loop.\n",
     "\n",
     "Remember to **SAVE** your code after changes, before running below cells.\n",
     "\n",
@@ -281,7 +281,7 @@
    "source": [
     "#### Implementing the Tile Clause\n",
     "\n",
-    "From the top menu, click on *File*, and *Open* `laplace2d.c` from the current directory at `English/C/source_code/lab3` directory. Replace the `collapse` clause with the `tile` clause to break our multi-dimensional loops into smaller tiles. Try using a variety of different tile sizes, but for now keep one of the dimensions as a **multiple of 32**. We will talk later about why this is important.\n",
+    "From the top menu, click on *File*, and *Open* `laplace2d.c` from the current directory at `C/source_code/lab3` directory. Replace the `collapse` clause with the `tile` clause to break our multi-dimensional loops into smaller tiles. Try using a variety of different tile sizes, but for now keep one of the dimensions as a **multiple of 32**. We will talk later about why this is important.\n",
     "\n",
     "Remember to **SAVE** your code after changes, before running below cells.\n",
     "\n",
