Fixed review comments. Dockerfile and Singularity scripts

--- a/hpc_ai/ai_science_cfd/English/python/jupyter_notebook/CFD/Part2.ipynb
+++ b/hpc_ai/ai_science_cfd/English/python/jupyter_notebook/CFD/Part2.ipynb
@@ -94,6 +94,9 @@
     "# Importing Necessary Libaries \n",
     "from __future__ import print_function\n",
     "\n",
+    "import sys\n",
+    "sys.path.append('/workspace/python/source_code')\n",
+    "\n",
     "import numpy as np\n",
     "import utils.data_utils as data_utils\n",
     "import tensorflow as tf\n",
@@ -551,6 +554,10 @@
    "metadata": {},
    "source": [
     "In the upcoming notebook let us define a 5 Layer fully connected network and train it.\n",
+    "\n",
+    "## Important:\n",
+    "<mark>Shutdown the kernel before clicking on “Next Notebook” to free up the GPU memory.</mark>\n",
+    "\n",
     "\n",
     "## Licensing\n",
     "This material is released by NVIDIA Corporation under the Creative Commons Attribution 4.0 International (CC BY 4.0)"
