--- a/hpc_ai/ai_science_cfd/English/python/jupyter_notebook/CFD/Part3.ipynb
+++ b/hpc_ai/ai_science_cfd/English/python/jupyter_notebook/CFD/Part3.ipynb
@@ -70,6 +70,9 @@
     "# Importing Necessary Libraries \n",
     "from __future__ import print_function\n",
     "\n",
+    "import sys\n",
+    "sys.path.append('/workspace/python/source_code')\n",
+    "\n",
     "import numpy as np\n",
     "import utils.data_utils as data_utils\n",
     "import tensorflow as tf\n",
@@ -781,7 +784,10 @@
     "\n",
     "To put the above in simple words, when our Convolution neural networks learn, we have seen that it also convolutes over an area of the set kernel size where it takes the considerations of the neighbouring pixels and not just a single pixel, this makes the signed distance function a rightful choice as it assigns values to all the pixels in the input image.\n",
     "\n",
-    "In the upcoming notebook, let us introduce some advance networks and train them."
+    "In the upcoming notebook, let us introduce some advance networks and train them.\n",
+    "\n",
+    "## Important:\n",
+    "<mark>Shutdown the kernel before clicking on “Next Notebook” to free up the GPU memory.</mark>\n"
    ]
   },
   {
