--- a/hpc_ai/ai_science_cfd/English/python/jupyter_notebook/CFD/Part4.ipynb
+++ b/hpc_ai/ai_science_cfd/English/python/jupyter_notebook/CFD/Part4.ipynb
@@ -65,6 +65,9 @@
     "# Import Necessary Libraries\n",
     "from __future__ import print_function\n",
     "\n",
+    "import sys\n",
+    "sys.path.append('/workspace/python/source_code')\n",
+    "\n",
     "import numpy as np \n",
     "import time\n",
     "import importlib\n",
