--- a/hpc_ai/ai_science_cfd/English/python/jupyter_notebook/Intro_to_DL/Resnets.ipynb
+++ b/hpc_ai/ai_science_cfd/English/python/jupyter_notebook/Intro_to_DL/Resnets.ipynb
@@ -570,7 +570,10 @@
     "\n",
     "So, from the table above we can conclude that for this example how CNNs are efficient compared to other Machine Learning algorithms when it comes to image processing tasks.\n",
     "\n",
-    "Congrats on coming this far, now that you are introduced to Machine Learning and Deep Learning, you can get started on the domain specific problem accessible through the Home Page."
+    "Congrats on coming this far, now that you are introduced to Machine Learning and Deep Learning, you can get started on the domain specific problem accessible through the Home Page.\n",
+    "\n",
+    "## Important:\n",
+    "<mark>Shutdown the kernel before clicking on “Next Notebook” to free up the GPU memory.</mark>\n"
    ]
   },
   {
@@ -620,7 +623,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
