--- a/hpc_ai/ai_science_climate/English/python/jupyter_notebook/Intro_to_DL/CNN's.ipynb
+++ b/hpc_ai/ai_science_climate/English/python/jupyter_notebook/Intro_to_DL/CNN's.ipynb
@@ -133,7 +133,7 @@
     "\n",
     "## Why CNNs are good in Image related tasks? \n",
     "\n",
-    "1970, **David Marr** wrote a paper called [vision ](http://lolita.unice.fr/~scheer/cogsci/Marr%2082%20-%20Vision.pdf).It was a breakthrough in understating of how the brain does vision; he stated that vision task is performed in a hierarchal manner. You start simple and get complex. For example, you start with as simple as identifying edge, colours and then build upon them to detect the object and then classify them and so on.\n",
+    "1970, **David Marr** wrote a book called [vision](https://mitpress.mit.edu/books/vision).It was a breakthrough in understating of how the brain does vision; he stated that vision task is performed in a hierarchal manner. You start simple and get complex. For example, you start with as simple as identifying edge, colours and then build upon them to detect the object and then classify them and so on.\n",
     "\n",
     "The architecture of CNNs is designed as such to emulate the human brain's technique to deal with images. As convolutions are mainly used for extracting high-level features from the images such as edges/other patterns, these algorithms try to emulate our understanding of the vision. Certain filters do operations such as blurring the image, sharpening the image and then performing pooling operations on each of these filters to extract information from an image. As stated earlier, our understanding of vision consists that vision is a hierarchal process, and our brain deals with vision in a similar fashion. CNN also deals with understanding and classifying images similarly, thereby making them the appropriate choice for these kinds of tasks.\n",
     "\n",
@@ -489,6 +489,9 @@
     "\n",
     "Congrats on coming this far, now that you are introduced to Machine Learning and Deep Learning, you can get started on the Domain Specific Problem accessible through the Home Page.\n",
     "\n",
+    "## Exercise \n",
+    "Play with different hyper-parameters ( Epoch, depth of layers , kernel size ... ) to bring down loss further\n",
+    "\n",
     "## Important:\n",
     "<mark>Shutdown the kernel before clicking on “Next Notebook” to free up the GPU memory.</mark>"
    ]
@@ -497,6 +500,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    "\n",
     "## References : \n",
     "\n",
     "\n",
