--- a/hpc_ai/ai_science_climate/English/python/jupyter_notebook/Tropical_Cyclone_Intensity_Estimation/Countering_Data_Imbalance.ipynb
+++ b/hpc_ai/ai_science_climate/English/python/jupyter_notebook/Tropical_Cyclone_Intensity_Estimation/Countering_Data_Imbalance.ipynb
@@ -38,10 +38,10 @@
     "\n",
     "**Contents of the this notebook:**\n",
     "\n",
-    "- [Understand the drawbacks of existing solution](#Understand-the-Drawbacks)\n",
-    "- [Working out the solution](#Working-out-the-Solution)\n",
+    "- [Understand the drawbacks of existing solution](#Understanding-the-drawbacks)\n",
+    "- [Working out the solution](#Working-out-the-solution)\n",
     "    - [Data Augmentation](#Data-Augmentation)\n",
-    "- [Training the model](#Training-the-Model)\n",
+    "- [Training the model](#Training-the-Model-with-Data-Augmentation)\n",
     "\n",
     "**By the end of this notebook participant will:**\n",
     "\n",
@@ -119,7 +119,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Training the Model with Data Augmentation : \n",
+    "# Training the Model with Data Augmentation \n",
     "\n",
     "\n",
     "We create a new function called `augmentation(name,category,filenames,labels,i)` and here we add more samples to Category which have imbalanced data.  "
