--- a/hpc_ai/ai_science_climate/English/python/jupyter_notebook/Tropical_Cyclone_Intensity_Estimation/Downloading_Images.ipynb
+++ b/hpc_ai/ai_science_climate/English/python/jupyter_notebook/Tropical_Cyclone_Intensity_Estimation/Downloading_Images.ipynb
@@ -55,7 +55,7 @@
     "\n",
     "#### The Cell Type has been changed to Markdown so that you don't accidentally run the code.\n",
     "\n",
-    "#### It is not recommended to run the Code Until you fully Understand the code and it's Consequences , It Can Download Huge Amount of Data (~ 10's of GB's ) thereby Filling Your Computer's Memory"
+    "#### It is not recommended to run the code until you fully understand the code and it's consequences , It can download huge amount of data (~ 10's of GB's ) thereby filling your computer's memory"
    ]
   }
  ],
@@ -75,7 +75,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
