--- a/hpc_ai/ai_science_climate/English/python/jupyter_notebook/Tropical_Cyclone_Intensity_Estimation/Manipulation_of_Image_Data_and_Category_Determination_using_Text_Data.ipynb
+++ b/hpc_ai/ai_science_climate/English/python/jupyter_notebook/Tropical_Cyclone_Intensity_Estimation/Manipulation_of_Image_Data_and_Category_Determination_using_Text_Data.ipynb
@@ -38,10 +38,10 @@
     "\n",
     "**Contents of this notebook:**\n",
     "\n",
-    "- [Understand the Model Requirements](#Understand-the-Model-Requirements)\n",
-    "    - [Exploring Resizing Options](#Exploring-Different-Types-of-Resizing-options)\n",
+    "- [Understand the Model Requirements](#Understand-the-Model-requirements)\n",
+    "    - [Exploring Resizing Options](#Exploring-different-types-of-resizing-options)\n",
     "    - [Choosing a Random Patch](#Step-2-:-Choosing-a-Random-Patch-from-the-Image)\n",
-    "- [Annotating Our Dataset ](#Annotating-Our-Dataset) \n",
+    "- [Annotating Our Dataset ](#Annotating-our-dataset) \n",
     "- [Wrapping Things Up](#Wrapping-Things-Up-:)\n",
     "    - [Preparing the Dataset](#Preparing-the-Dataset)\n",
     "    - [Defining our Model](#Defining-our-Model)\n",
@@ -129,7 +129,7 @@
    "source": [
     "### Step 2 : Choosing a Random Patch from the Image\n",
     "\n",
-    "We will use the `np.random.randint()` function from the Numpy toolbox to generate random numbers. The parameters of this function are the upper limits and size of the Output array as mentioned in the [Numpy Documentation](https://docs.scipy.org/doc/numpy-1.15.1/reference/generated/numpy.random.randint.html)"
+    "We will use the `np.random.randint()` function from the Numpy toolbox to generate random numbers. The parameters of this function are the upper limits and size of the Output array as mentioned in the [Numpy Documentation](https://numpy.org/doc/stable/reference/random/generated/numpy.random.randint.html)"
    ]
   },
   {
@@ -639,7 +639,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
