--- a/hpc_ai/ai_science_climate/English/python/jupyter_notebook/Intro_to_DL/Part_2.ipynb
+++ b/hpc_ai/ai_science_climate/English/python/jupyter_notebook/Intro_to_DL/Part_2.ipynb
@@ -30,8 +30,7 @@
     "**Contents of the this notebook:**\n",
     "\n",
     "- [How a Deep Learning project is planned ?](#Machine-Learning-Pipeline)\n",
-    "- [Wrapping things up with an example ( Classification )](#Wrapping-Things-up-with-an-Example)\n",
-    "     - [Fully Connected Networks](#Image-Classification-on-types-of-Clothes)\n",
+    "- [Wrapping things up with an example ( Classification )](#Image-Classification-on-types-of-clothes)\n",
     "\n",
     "\n",
     "**By the end of this notebook participant will:**\n",
@@ -373,7 +372,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We get an Accuracy of 87% in the Test dataset which is less than the 89% we got during the Training phase, This problem in ML is called as Overfitting, and we have discussed the same in the previous notebook. \n",
+    "## Exercise\n",
+    "\n",
+    "Try adding more dense layers to the network above and observe change in accuracy."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We get an Accuracy of 87% in the Test dataset which is less than the 89% we got during the Training phase, This problem in ML is called as Overfitting\n",
     "\n",
     "## Important:\n",
     "<mark>Shutdown the kernel before clicking on “Next Notebook” to free up the GPU memory.</mark>\n",
