Fixed Competition and Solutions jupyter notebook module not found error

--- a/hpc_ai/ai_science_climate/English/python/jupyter_notebook/Tropical_Cyclone_Intensity_Estimation/Competition.ipynb
+++ b/hpc_ai/ai_science_climate/English/python/jupyter_notebook/Tropical_Cyclone_Intensity_Estimation/Competition.ipynb
@@ -71,6 +71,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.append('/workspace/python/source_code')\n",
+    "\n",
     "from utils import * \n",
     "import os\n",
     "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"0\"\n",
