--- a/hpc_ai/ai_science_cfd/English/python/jupyter_notebook/Intro_to_DL/CNN's.ipynb
+++ b/hpc_ai/ai_science_cfd/English/python/jupyter_notebook/Intro_to_DL/CNN's.ipynb
@@ -53,6 +53,8 @@
     "\n",
     "![alt_text](images/cnn.jpeg)\n",
     "\n",
+    "*Source: https://fr.mathworks.com/solutions/deep-learning/convolutional-neural-network.html*\n",
+    "\n",
     "Each input image will pass it through a series of convolution layers with filters (Kernels), pooling, fully connected layers (FC) and apply Softmax function to classify an object with probabilistic values between 0 and 1. \n",
     "\n",
     "Let us discuss in brief about the following in detail : \n",
@@ -70,9 +72,13 @@
     "\n",
     "![alt_text](images/conv.gif)\n",
     "\n",
+    "*Source: https://towardsdatascience.com/a-comprehensive-guide-to-convolutional-neural-networks-the-eli5-way-3bd2b1164a53*\n",
+    "\n",
     "We have seen how the convolution operation works, and now let us now see how convolution operation is carried out with multiple layers.\n",
     "\n",
     "![alt_text](images/conv_depth.png)\n",
+    "\n",
+    "*Source: https://towardsdatascience.com/a-comprehensive-introduction-to-different-types-of-convolutions-in-deep-learning-669281e58215*\n",
     "\n",
     "Let us define the terms :\n",
     "\n",
@@ -113,6 +119,8 @@
     "\n",
     "![alt_text](images/max_pool.png)\n",
     "\n",
+    "*Source: https://www.programmersought.com/article/47163598855/*\n",
+    "\n",
     "#### Fully Connected Layer :\n",
     "\n",
     "We will then flatten the output from the convolutions layers and feed into it a _Fully Connected layer_ to generate a prediction. The fully connected layer is an ANN Model whose inputs are the features of the Inputs obtained from the Convolutions Layers. \n",
@@ -132,6 +140,8 @@
     "<td> <img src=\"images/convtranspose.gif\" alt=\"Drawing\" style=\"width: 540px;\"/></td>\n",
     "<td> <img src=\"images/convtranspose_conv.gif\" alt=\"Drawing\" style=\"width: 500px;\"/> </td>\n",
     "</tr></table>\n",
+    "\n",
+    "*Source https://towardsdatascience.com/a-comprehensive-introduction-to-different-types-of-convolutions-in-deep-learning-669281e58215*\n",
     "\n",
     "Tranposed Convolution can also be visualised as Convolution of a Layer with 2x2 padding as displayed in the right gif.\n",
     "\n",
@@ -505,7 +515,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## References : \n",
+    "## Acknowledgement : \n",
     "\n",
     "\n",
     "[Transposed Convolutions explained](https://medium.com/apache-mxnet/transposed-convolutions-explained-with-ms-excel-52d13030c7e8)\n",
