Updated README. Updated link and references

--- a/hpc_ai/ai_science_climate/English/python/jupyter_notebook/Tropical_Cyclone_Intensity_Estimation/Approach_to_the_Problem_&_Inspecting_and_Cleaning_the_Required_Data.ipynb
+++ b/hpc_ai/ai_science_climate/English/python/jupyter_notebook/Tropical_Cyclone_Intensity_Estimation/Approach_to_the_Problem_&_Inspecting_and_Cleaning_the_Required_Data.ipynb
@@ -21,7 +21,7 @@
     "[1](The_Problem_Statement.ipynb)\n",
     "[2]\n",
     "[3](Manipulation_of_Image_Data_and_Category_Determination_using_Text_Data.ipynb)\n",
-    "[4](Removing_Edges_Black_Patches_and_Countering_Data_Imbalance.ipynb)\n",
+    "[4](Countering_Data_Imbalance.ipynb)\n",
     "[5](Competition.ipynb)\n",
     "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
     "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
@@ -88,9 +88,11 @@
     "\n",
     "<table><tr>\n",
     "<td><img src=\"images/example.jpg\" alt=\"Drawing\" style=\"width: 320px;\"/></td>\n",
-    "<td><img src=\"https://www.nrlmry.navy.mil/tcdat/tc05/ATL/12L.KATRINA/ir/geo/1km/20050827.1715.goes12.x.ir1km.12LKATRINA.100kts-940mb-244N-846W.jpg\" alt=\"Drawing\" style=\"width: 320px;\"/></td>\n",
+    "<td><img src=\"images/example1.jpg\" alt=\"Drawing\" style=\"width: 320px;\"/></td>\n",
     "</tr>\n",
     "</table>\n",
+    "\n",
+    "*Source: https://www.nrlmry.navy.mil/*\n",
     "\n",
     "#### Each Image will be annotated to a category of Cyclone Intensity using the text data with the help of the following table :\n",
     "\n",
@@ -450,7 +452,7 @@
     "[1](The_Problem_Statement.ipynb)\n",
     "[2]\n",
     "[3](Manipulation_of_Image_Data_and_Category_Determination_using_Text_Data.ipynb)\n",
-    "[4](Removing_Edges_Black_Patches_and_Countering_Data_Imbalance.ipynb)\n",
+    "[4](Countering_Data_Imbalance.ipynb)\n",
     "[5](Competition.ipynb)\n",
     "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
     "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
